force-app/main/default/objects/MUSW__EventLog__c/fields/MUSW__Database_Operation__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Database_Operation__c</fullName>
    <label>Database Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>