force-app/main/default/objects/MUSW__EventLog__c/fields/MUSW__MessageLong__c.field-meta.xml
<CustomField>
    <fullName>MUSW__MessageLong__c</fullName>
    <label>Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>