force-app/main/default/objects/MUSW__EventLog__c/fields/MUSW__Record_ID__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Record_ID__c</fullName>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>