force-app/main/default/objects/MUSW__EventLog__c/fields/MUSW__Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Time_Stamp__c</fullName>
    <description>This is used to record the time stamp</description>
    <label>Time Stamp</label>
    <type>DateTime</type>
</CustomField>