force-app/main/default/objects/MUSW__EventLog__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GENERAL</fullName>
                <default>true</default>
                <label>GENERAL</label>
            </value>
            <value>
                <fullName>SOQL</fullName>
            </value>
            <value>
                <fullName>SOSL</fullName>
            </value>
            <value>
                <fullName>DML</fullName>
            </value>
            <value>
                <fullName>EMAIL</fullName>
            </value>
            <value>
                <fullName>WEBSERVICES</fullName>
            </value>
            <value>
                <fullName>EXCEPTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>