force-app/main/default/objects/MUSW__EventLog__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>MUSW__Record_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>MUSW__Apex_Code_Name__c</columns>
    <columns>MUSW__Apex_Method__c</columns>
    <columns>MUSW__Automation_Rule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>